# Retarded_Peace

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/maps/: map0.map  map1.map  map2.map
src/: air_unit.cpp  artillery.cpp  color.cpp  display.cpp  editor.cpp  game.cpp  genericartillery.cpp  genericinfantry.cpp  helicopter.cpp  image.cpp  infantery.cpp  land_unit.cpp  map.cpp  player.cpp  rect.cpp  sprit.cpp  terrain.cpp  tile.cpp  typeunit.cpp  unit.cpp  vector_image.cpp  vehicules.cpp  window.cpp
src/data/maps/: map0.map
src/editor/: main.cpp
src/headers/: air_unit.h  artillery.h  color.h  display.h  editor.h  game.h  genericartillery.h  genericinfantry.h  helicopter.h  image.h  infantery.h  land_unit.h  map.h  player.h  rect.h  sprit.h  terrain.h  tile.h  typeunit.h  unit.h  vector_image.h  vehicules.h  window.h
src/palier0/: main.cpp  testColor.cpp  testDisplay.cpp  testImage.cpp  testMap.cpp  testTile.cpp  testVectorimage.cpp  testWindow.cpp
src/palier1/: testunit.cpp
src/test_opencv/: main.cpp
uml/: Image.puml
uml/class_diagrams/: global.puml  global_cut_1.puml  global_cut_2.puml  global_cut_3.puml  units.puml  units_legacy.puml
